// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hint renders RTL styling 1`] = `
<div
  className="c-txt__hint is-rtl "
  data-garden-id="textfields.hint"
  data-garden-version="version"
/>
`;

exports[`Hint renders default styling 1`] = `
<div
  className="c-txt__hint "
  data-garden-id="textfields.hint"
  data-garden-version="version"
/>
`;

exports[`Hint renders small styling if provided 1`] = `
<div
  className="c-txt__hint c-txt__hint--sm "
  data-garden-id="textfields.hint"
  data-garden-version="version"
/>
`;
